[fix]#8293 align illustrated list content

--- a/css/modules.less
+++ b/css/modules.less
@@ -2101,6 +2101,18 @@ section.lightbox-window{
 	cursor: default;
 }
 
+section.lightbox{
+	.accordion ul.illustrated-list{
+		li{
+			margin-bottom: 5px;
+			img.illustration{
+				position: relative;
+			}
+		}
+
+	}
+}
+
 .lightbox form{
 	.fill-bar{
 		margin-top: 12px;
